Fix canvas stage alignment

--- a/styles.css
+++ b/styles.css
@@ -103,8 +103,8 @@ button.active {
 
 .cah-canvas-stage {
   position: absolute;
-  left: 50%;
-  top: 50%;
+  left: 0;
+  top: 0;
   width: 1920px;
   height: 1080px;
   background: #fffaf4;
